[gd_scene load_steps=9 format=3 uid="uid://dliy33l2rrfj5"]

[ext_resource type="Script" uid="uid://c3635c45dv7qt" path="res://Scenes/ElectricGrid/electric_grid.gd" id="1_3g8ay"]
[ext_resource type="Texture2D" uid="uid://boslw41axcqwk" path="res://Scenes/ElectricGrid/ElectricGrid.png" id="2_otd2o"]
[ext_resource type="Texture2D" uid="uid://yr753wyvfhm4" path="res://Resources/Textures/pozoElectrico.png" id="3_fr8ji"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80hje"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_sul61"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_otd2o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2tyne"]
resource_name = "activate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_fr8ji"), ExtResource("2_otd2o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.31, 0.67, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_i8kqq"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_otd2o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oo1x5"]
_data = {
&"RESET": SubResource("Animation_sul61"),
&"activate": SubResource("Animation_2tyne"),
&"idle": SubResource("Animation_i8kqq")
}

[node name="ElectricGrid" type="Node2D"]
script = ExtResource("1_3g8ay")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_otd2o")
hframes = 4

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_80hje")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oo1x5")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
